--- a/05中期/中期论文.md
+++ b/05中期/中期论文.md
@@ -227,7 +227,7 @@ q=k·v
 输入、输出变量的模糊化处理分为两步：先确定合理确定输入、输出量的论语，然后再进行模糊化。
 
 1、输出、输出量的论域确定  
-根据前面的分析，相位A、B的车辆数应该是2个车道车辆数的综合，而各路口都设置有2个相位 100cm 的车辆检测器，考虑到车辆安全停放的间距、小车车身长度（其他长的车辆长度都换成小车长度）等，将车辆排队长度输入变量Yi+1的变化范围设定为0~40，其基本论域是[0，40]；按 1 辆/秒的车辆驶离率，通行相位车辆通过输入变量Di的变化设定为0~60，其基本论域是[0，60]；输出变量T的变化范围设定为15~55，则其基本论域为[15，55]。  
+根据前面的分析，相位A、B的车辆数应该是2个车道车辆数的综合，而各路口都设置有2个相位 100cm 的车辆检测器，考虑到车辆安全停放的间距、小车车身长度（其他长的车辆长度都换成小车长度）等，将车辆排队长度输入变量Yi+1的变化范围设定为0~40，其基本论域是[0，40]；按 1 辆/秒的车辆驶离率，通行相位车辆通过输入变量Di的变化设定为0\~60，其基本论域是[0，60]；输出变量T的变化范围设定为15\~55，则其基本论域为[15，55]。  
 因为排队长度不可能出现负数，所以经过量化之后输出变量Di、Yi+1的量化论域为：  
 Di={0，1，2，3，4，5，6，7，8，9，10}  
 输出变量T的量化论域选定为：  
